# advent_of_code

./: LICENSE  README.md
2023/rust/: Cargo.toml
2023/rust/day1/: Cargo.toml
2023/rust/day10/: Cargo.toml
2023/rust/day10/src/: main.rs  oldmain.rs
2023/rust/day11/: Cargo.toml
2023/rust/day11/src/: main.rs
2023/rust/day13/: Cargo.toml
2023/rust/day14/: Cargo.toml
2023/rust/day14/src/: main.rs
2023/rust/day15/: Cargo.toml
2023/rust/day16/: Cargo.toml
2023/rust/day3/: Cargo.toml
2023/rust/day4/: Cargo.toml
2023/rust/day5/: Cargo.toml
2023/rust/day6/src/: main.rs
2023/rust/day7/: Cargo.toml
2023/rust/day8/: Cargo.toml
2023/rust/day9/: Cargo.toml
2023/rust/day9/src/: main.rs
2024/elixir/: README.md  mix.exs
2024/elixir/lib/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex
2024/elixir/lib/mix/tasks/aoc/: generate.ex  run.ex
2024/elixir/priv/: README.md
elixir/: .gitignore  README.md  mix.exs
elixir/lib/mix/tasks/aoc/: generate.ex  run.ex
elixir/lib/year2015/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex
elixir/lib/year2024/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex
elixir/priv/input/: README.md
rust/: .gitignore  Cargo.toml  README.md
rust/aoc-macros/: Cargo.toml
rust/rust-aoc-macros/: Cargo.toml
rust/rust-aoc-macros/src/: lib.rs
rust/src/: lib.rs  main.rs  str_index_helpers.rs
rust/src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day11.rs  day13.rs  day14.rs  day15.rs  day16.rs  mod.rs
